# gvox_engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
assets/: ambassy.gvox  black_widow.gvox  default_settings.json  hand.gvox  phantom_mansion.gvox  settings.json  sponge.vox
assets/brushes/: README.md
assets/brushes/autumn_leaves/: brush_info.glsl  brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/autumn_maple/: brush_info.glsl  brush_kernel.glsl  config.json
assets/brushes/autumn_oak/: brush_info.glsl  brush_kernel.glsl  config.json
assets/brushes/castle_wall/: brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/chunkgen/: brush_kernel.glsl  config.json
assets/brushes/erode/: brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/mandelbulb/: brush_info.glsl  brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/model/: brush_info.glsl  brush_kernel.glsl  config.json
assets/brushes/paint/: brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/smooth/: brush_kernel.glsl  config.json
assets/brushes/sphere/: brush_info.glsl  brush_input.glsl  brush_kernel.glsl  config.json
assets/brushes/spruce_tree/: brush_info.glsl  brush_kernel.glsl  config.json
assets/brushes/terrain/: brush_info.glsl  brush_input.glsl  brush_kernel.glsl  config.json
assets/fonts/Inter_Tight/: OFL.txt
assets/shaders/: block_info.hlsl  chunk.hlsl  core.hlsl
assets/shaders/drawing/: defines.hlsl  raymarch.hlsl  ui.hlsl  world.hlsl
assets/shaders/utils/: dda.hlsl  intersect.hlsl  pickblock.hlsl  ray.hlsl  shape_dist.hlsl  tonemapping.hlsl
assets/shaders/world/: blockedit.hlsl  new_presence.hlsl  subchunk_x2x4.hlsl  subchunk_x8p.hlsl
cmake/: deps.cmake  static_analysis.cmake  vcpkg.cmake  warnings.cmake
cmake/toolchains/: cl-x86_64-windows-msvc.cmake  clang-x86_64-linux-gnu.cmake  clang-x86_64-windows-msvc.cmake  gcc-x86_64-linux-gnu.cmake  vcvars.cmake
cmake/vcpkg-overlay-ports/fiber-tasking-lib/: fix-cmake.patch  portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/imgui-node-editor/: portfile.cmake  update-for-new-imgui.patch  vcpkg.json
cmake/vcpkg-overlay-ports/jasper/: portfile.cmake
cmake/vcpkg-overlay-ports/soloud/: portfile.cmake  vcpkg.json
docs/: README.md
packaging/: gabe_voxel_game.desktop  main.rc  main.rc.in
packaging/infos/: license.txt  readme.txt  welcome.txt
shaders/: chunk_edit.comp.glsl  chunk_opt.comp.glsl  chunk_opt_brush.comp.glsl  chunkgen.comp.glsl  chunkgen_brush.comp.glsl  compute.glsl  draw.comp.glsl  optical_depth.comp.glsl  perframe.comp.glsl  raytrace.comp.glsl  shared.inl  startup.comp.glsl
shaders/brushes/castle_wall/: config.json  info.glsl
shaders/brushes/chunkgen/: brush_info.glsl  config.json  kernel.glsl
shaders/brushes/sphere/: config.json  (+1 more)
shaders/common/: buffers.hlsl  glfw_keycodes.hlsl  input.hlsl
shaders/pipelines/: chunkgen.hlsl  depth_prepass0.hlsl  depth_prepass1.hlsl  draw.hlsl  perframe.hlsl  startup.hlsl  subchunk_x2x4.hlsl  subchunk_x8up.hlsl
shaders/utils/: bitpacking.glsl  brush_kernel.glsl  chunkgen.glsl  gvox_palette.glsl  impl_brush_header.glsl  impl_brush_input.glsl  impl_brush_kernel.glsl  math.glsl  math.hlsl  noise.glsl  noise.hlsl  rand.hlsl  raytrace.glsl  sd_shapes.glsl  sky.glsl  tonemapping.hlsl  voxel.glsl  voxel_edit.glsl
src/: app.comp.glsl  app.cpp  app.hpp  app.inl  app_audio.cpp  app_audio.hpp  app_settings.cpp  app_settings.hpp  app_ui.cpp  app_ui.hpp  base_app.hpp  core.hpp  core.inl  custom_ui_components.hpp  debug_utils.cpp  debug_utils.hpp  defines.inl  imgui_console.hpp  main.cpp  mesh_model.cpp  render_context.hpp  test.comp.glsl  ui_components.hpp  voxel_app.cpp  voxel_app.hpp  window.hpp
src/application/: audio.cpp  audio.hpp  globals.inl  input.inl  player.cpp  player.hpp  settings.cpp  settings.hpp  settings.inl  ui.cpp  ui.hpp
src/cpu/: app_audio.cpp  app_audio.hpp  app_settings.cpp  app_settings.hpp  app_ui.cpp  app_ui.hpp  app_window.hpp  core.hpp  deps.cpp  main.cpp  mesh_model.cpp  mesh_model.hpp  node_editor.cpp  node_editor.hpp  voxel_app.cpp  voxel_app.hpp
src/daxa_common/: common.hpp  window.hpp
src/game/: chunk.hpp  defines.inl  game.hpp  graphics.hpp  player.hpp  render_context.hpp
src/gpu/: app.comp.glsl  chunk_alloc.comp.glsl  chunk_edit.comp.glsl  chunk_hierarchy.comp.glsl  chunk_opt.comp.glsl  color_scene.comp.glsl  downscale.comp.glsl  per_chunk.comp.glsl  perframe.comp.glsl  postprocessing.comp.glsl  spatial_blur.comp.glsl  ssao.comp.glsl  startup.comp.glsl  test.comp.glsl  trace_depth_prepass.comp.glsl  trace_depth_prepass.glsl  trace_primary.comp.glsl  trace_secondary.comp.glsl  upscale_reconstruct.comp.glsl  voxel_particle.raster.glsl  voxel_particle_sim.comp.glsl
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/renderer/: core.inl  downscale.comp.glsl  downscale.inl  fsr.cpp  fsr.inl  postprocessing.comp.glsl  postprocessing.inl  postprocessing.raster.glsl  renderer.cpp  renderer.hpp  sky.comp.glsl  sky.glsl  sky.inl  trace_primary.comp.glsl  trace_primary.inl  trace_secondary.comp.glsl  trace_secondary.inl  voxel_particle.raster.glsl
src/shared/: allocator.inl  app.inl  compressed_model.inl  core.inl  globals.inl  gvox_model.inl  input.inl  output.inl  player.inl  scene.inl  settings.inl  shapes.inl  shared.inl  user_input.inl  voxel_malloc.inl  voxels.inl
src/utilities/: allocator.glsl  allocator.inl  async_pipeline_manager.hpp  core.hpp  debug.cpp  debug.hpp  gpu_context.cpp  gpu_context.hpp  gpu_resources.cpp  gpu_resources.hpp  gpu_task.hpp  math.cpp  math.hpp  ping_pong_resource.hpp  record_context.hpp  thread_pool.hpp
src/utils/: window.hpp
src/voxels/: brushes.glsl  brushes.inl  core.glsl  gvox_model.glsl  gvox_model.inl  model.cpp  model.hpp  pack_unpack.glsl  voxel_particle.glsl  voxel_particle_perframe.comp.glsl  voxel_particle_sim.comp.glsl  voxel_particles.inl  voxel_world.cpp  voxel_world.inl  voxels.glsl  voxels.inl
testing/: CMakeLists.txt
testing/audio/: main.cpp
(+413 files in other folders)
